<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.NewTrainingFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/newTrainingConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/new_training_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/new_training_label_text"
                android:textSize="@dimen/title_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/new_training_layout"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_training_title">

                <EditText
                    android:id="@+id/training_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/training_name_hint"
                    android:inputType="textPersonName" />

                <Spinner
                    android:id="@+id/training_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/exercise_list_recycle_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"/>

            </LinearLayout>

            <Button
                android:id="@+id/add_exercise_button"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/add_exercise_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/new_training_layout"
                app:layout_constraintTop_toTopOf="@+id/new_training_layout" />

            <Button
                android:id="@+id/add_break_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/add_break"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/new_training_layout"
                app:layout_constraintTop_toBottomOf="@+id/add_exercise_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>